# Qualis-Zotero

./: Inserir_QUALIS.ipynb  LICENSE  README.md  config.yaml  pyproject.toml  readthedocs.yaml  requirements.txt  requirements.txt.txt  teste.py
docs/: Makefile  index.rst  make.bat  usage.rst
docs/source/: conf.py
qualis_zotero/: __init__.py  __main__.py  config.py  core.py  openalex.py  qualis.py  zotero.py
qualis_zotero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
