[project]
name = "qualis-zotero"
version = "0.1.3"
description = "Integra Zotero, OpenAlex e Qualis CAPES"
authors = [{ name="Wilson Vanucci", email="wilsonvanuccicl@gmail.com" }]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "pandas",
    "requests",
    "PyYAML",
    "tqdm",
    "thefuzz"
]

[project.urls]
"Homepage" = "https://github.com/wvanucci/Qualis-Zotero"
"Documentation" = "https://qualis-zotero.readthedocs.io"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"